app/src/main/java/com/example/dudu/data/remote/errors/BackendException.kt
package com.example.dudu.data.remote.errors

class BackendException(val errorMessage: String?) : Exception()